# Instagram-Server-Django

./: pyproject.toml
common/: models.py
common/migrations/: 0001_initial.py
config/: settings.py  urls.py
feeds/: admin.py  models.py  serializers.py  urls.py  views.py
feeds/migrations/: 0001_initial.py  0002_feed_user.py
reviews/: admin.py  models.py  serializers.py  urls.py  views.py
reviews/migrations/: 0001_initial.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
